# Capstone-Project-LLMS

./: .flake8  .gitignore  .pylintrc  README.md  __init__.py  data.json  main.py  pyproject.toml  requirements.txt
cli/: __init__.py  commands.py
models/: __init__.py  task.py
storage/: __init__.py  json_storage.py
utils/: __init__.py  decorators.py
