[project]
name = "task_manager"
version = "1.0.0"
description = "Console-based modular Task Manager Capstone Project"
authors = [{ name = "Zohaib Ahmed" }]
requires-python = ">=3.10"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I"]
ignore = ["E501", "W503"]
exclude = ["venv", "__pycache__"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
