[project]
name = "task_manager"
version = "1.0.0"
description = "A simple CLI Task Manager project demonstrating Python features."
authors = [{ name = "Your Name" }]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
select = ["E", "F", "W"]
ignore = ["E501"]

[tool.mypy]
ignore_missing_imports = true
strict = true
